@@ -134,6 +134,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ClassComponents\CommonImplWithDependancy.cs" />
+    <Compile Include="ClassComponents\NonPublicComponent.cs" />
     <Compile Include="ClassComponents\CustomerValidator.cs" />
     <Compile Include="ClassComponents\IValidator.cs" />
     <Compile Include="ClassComponents\CustomerChain.cs" />
