@@ -58,7 +58,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name="assemblyName">The assembly name.</param>
 		/// <returns>The corresponding <see cref="FromDescriptor"/></returns>
-		public static FromDescriptor FromAssemblyNamed(string assemblyName)
+		public static FromAssemblyDescriptor FromAssemblyNamed(string assemblyName)
 		{
 			Assembly assembly;
 			String extension = Path.GetExtension(assemblyName);
@@ -87,13 +87,13 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name="assembly">The assembly.</param>
 		/// <returns>The corresponding <see cref="FromDescriptor"/></returns>
-		public static FromDescriptor FromAssembly(Assembly assembly)
+		public static FromAssemblyDescriptor FromAssembly(Assembly assembly)
 		{
 			if (assembly == null)
 			{
 				throw new ArgumentNullException("assembly");
 			}
-			return From(assembly.GetTypes());
+			return new FromAssemblyDescriptor(assembly);
 		}
 
 		/// <summary>
@@ -103,7 +103,7 @@ namespace Castle.MicroKernel.Registration
 		/// <returns>The corresponding <see cref="FromDescriptor"/></returns>
 		public static FromDescriptor From(IEnumerable<Type> types)
 		{
-			return new FromDescriptor(types);
+			return new FromTypesDescriptor(types);
 		}
 
 		/// <summary>
@@ -113,7 +113,7 @@ namespace Castle.MicroKernel.Registration
 		/// <returns>The corresponding <see cref="FromDescriptor"/></returns>
 		public static FromDescriptor Pick(IEnumerable<Type> types)
 		{
-			return new FromDescriptor(types);
+			return new FromTypesDescriptor(types);
 		}
 
 		/// <summary>
@@ -123,7 +123,7 @@ namespace Castle.MicroKernel.Registration
 		/// <returns>The corresponding <see cref="FromDescriptor"/></returns>
 		public static FromDescriptor From(params Type[] types)
 		{
-			return new FromDescriptor(types);
+			return new FromTypesDescriptor(types);
 		}
 	}
 }
